--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paper-search-mcp-nodejs",
+  "name": "bach-paper-search-mcp-nodejs",
   "version": "0.2.2",
   "description": "A Node.js MCP server for searching and downloading academic papers from multiple sources, including arXiv, PubMed, bioRxiv, Web of Science, and more.",
   "main": "dist/server.js",
@@ -12,7 +12,6 @@
     "start": "node dist/server.js",
     "start:mcp": "tsx src/server.ts",
     "dev": "tsx src/server.ts",
-    "test": "jest",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts"
   },
@@ -40,13 +39,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
     "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "eslint": "^8.57.0",
-    "jest": "^29.7.0",
     "prettier": "^3.3.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
